kubernetes/base/actual-budget/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  labels:
    component: server
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: actual-budget.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual-budget
            port:
              number: 80

  - host: actual-budget.actual-budget.svc.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual-budget
            port:
              number: 80
  tls:
  - hosts:
    - actual-budget.k8s.funkyboy.zone
    - actual-budget.actual-budget.svc.cluster.local
    secretName: actual-budget-ingress-cert
